--- a/docs/docs-ref-autogen/outlook_1_2/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.localclienttime.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 83ea5b8f7757614b13cfcf4d2cb8917a31a2d482
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 00134a7092721c09ab0e5d5447ef2da40ed9e185
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26648734"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539588"
 items:
 - uid: Outlook_1_2.Office.LocalClientTime
   summary: >-
-    <span data-ttu-id="fb10c-p101">表示本地客户端时区中的日期和时间。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="fb10c-p101">Represents a date and time in the local client's time zone. Read mode only.</span></span>
+    <span data-ttu-id="c61a4-p101">表示本地客户端时区中的日期和时间。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="c61a4-p101">Represents a date and time in the local client's time zone. Read mode only.</span></span>
 
 
-    <span data-ttu-id="fb10c-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fb10c-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="c61a4-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c61a4-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="fb10c-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="fb10c-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="fb10c-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="fb10c-105">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="c61a4-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="c61a4-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="c61a4-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="c61a4-105">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="fb10c-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="fb10c-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="fb10c-107">阅读</span><span class="sxs-lookup"><span data-stu-id="fb10c-107">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="c61a4-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="c61a4-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="c61a4-107">阅读</span><span class="sxs-lookup"><span data-stu-id="c61a4-107">Read</span></span></td></tr></table>
   name: Office.LocalClientTime
   fullName: Office.LocalClientTime
   langs:
@@ -33,7 +33,7 @@ items:
   - Outlook_1_2.Office.LocalClientTime.timezoneOffset
   - Outlook_1_2.Office.LocalClientTime.year
 - uid: Outlook_1_2.Office.LocalClientTime.date
-  summary: <span data-ttu-id="fb10c-108">表示月份中的某一天的整数值。</span><span class="sxs-lookup"><span data-stu-id="fb10c-108">Integer value representing the day of the month.</span></span>
+  summary: <span data-ttu-id="c61a4-108">表示月份中的某一天的整数值。</span><span class="sxs-lookup"><span data-stu-id="c61a4-108">Integer value representing the day of the month.</span></span>
   name: date
   fullName: date
   langs:
@@ -45,7 +45,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.hours
-  summary: <span data-ttu-id="fb10c-109">表示 24 小时时钟的小时的整数值。</span><span class="sxs-lookup"><span data-stu-id="fb10c-109">Integer value representing the hour on a 24-hour clock.</span></span>
+  summary: <span data-ttu-id="c61a4-109">表示 24 小时时钟的小时的整数值。</span><span class="sxs-lookup"><span data-stu-id="c61a4-109">Integer value representing the hour on a 24-hour clock.</span></span>
   name: hours
   fullName: hours
   langs:
@@ -57,7 +57,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.milliseconds
-  summary: <span data-ttu-id="fb10c-110">表示毫秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="fb10c-110">Integer value representing the milliseconds.</span></span>
+  summary: <span data-ttu-id="c61a4-110">表示毫秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="c61a4-110">Integer value representing the milliseconds.</span></span>
   name: milliseconds
   fullName: milliseconds
   langs:
@@ -69,7 +69,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.minutes
-  summary: <span data-ttu-id="fb10c-111">表示分钟的整数值。</span><span class="sxs-lookup"><span data-stu-id="fb10c-111">Integer value representing the minutes.</span></span>
+  summary: <span data-ttu-id="c61a4-111">表示分钟的整数值。</span><span class="sxs-lookup"><span data-stu-id="c61a4-111">Integer value representing the minutes.</span></span>
   name: minutes
   fullName: minutes
   langs:
@@ -81,7 +81,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.month
-  summary: <span data-ttu-id="fb10c-112">表示月份的整数值，从 0（表示 1 月）开始到 11（表示十二月）。</span><span class="sxs-lookup"><span data-stu-id="fb10c-112">Integer value representing the month, beginning with 0 for January to 11 for December.</span></span>
+  summary: <span data-ttu-id="c61a4-112">表示月份的整数值，从 0（表示 1 月）开始到 11（表示十二月）。</span><span class="sxs-lookup"><span data-stu-id="c61a4-112">Integer value representing the month, beginning with 0 for January to 11 for December.</span></span>
   name: month
   fullName: month
   langs:
@@ -93,7 +93,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.seconds
-  summary: <span data-ttu-id="fb10c-113">表示秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="fb10c-113">Integer value representing the seconds.</span></span>
+  summary: <span data-ttu-id="c61a4-113">表示秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="c61a4-113">Integer value representing the seconds.</span></span>
   name: seconds
   fullName: seconds
   langs:
@@ -105,7 +105,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.timezoneOffset
-  summary: <span data-ttu-id="fb10c-114">表示本地时区与 UTC 之间的分钟数差异的整数值。</span><span class="sxs-lookup"><span data-stu-id="fb10c-114">Integer value representing the number of minutes difference between the local time zone and UTC.</span></span>
+  summary: <span data-ttu-id="c61a4-114">表示本地时区与 UTC 之间的分钟数差异的整数值。</span><span class="sxs-lookup"><span data-stu-id="c61a4-114">Integer value representing the number of minutes difference between the local time zone and UTC.</span></span>
   name: timezoneOffset
   fullName: timezoneOffset
   langs:
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_2.Office.LocalClientTime.year
-  summary: <span data-ttu-id="fb10c-115">表示年份的整数值。</span><span class="sxs-lookup"><span data-stu-id="fb10c-115">Integer value repesenting the year.</span></span>
+  summary: <span data-ttu-id="c61a4-115">表示年的整数值。</span><span class="sxs-lookup"><span data-stu-id="c61a4-115">Integer value representing the year.</span></span>
   name: year
   fullName: year
   langs:
