--- a/docs/docs-ref-autogen/outlook_1_5/office.localclienttime.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.localclienttime.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 85bb89e59f26fa6e36aeb08a90341bc17704d632
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 81c7a9c23c7fb19fd91d7440f67752ffe826acdd
+ms.sourcegitcommit: 1d3a730f48caaabe5af4f1abb74802bc91b75f4e
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26645416"
+ms.lasthandoff: 01/25/2019
+ms.locfileid: "29539826"
 items:
 - uid: Outlook_1_5.Office.LocalClientTime
   summary: >-
-    <span data-ttu-id="c74bf-p101">表示本地客户端时区中的日期和时间。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="c74bf-p101">Represents a date and time in the local client's time zone. Read mode only.</span></span>
+    <span data-ttu-id="079ec-p101">表示本地客户端时区中的日期和时间。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="079ec-p101">Represents a date and time in the local client's time zone. Read mode only.</span></span>
 
 
-    <span data-ttu-id="c74bf-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c74bf-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="079ec-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="079ec-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="c74bf-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="c74bf-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="c74bf-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="c74bf-105">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="079ec-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="079ec-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="079ec-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="079ec-105">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="c74bf-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="c74bf-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="c74bf-107">阅读</span><span class="sxs-lookup"><span data-stu-id="c74bf-107">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="079ec-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="079ec-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="079ec-107">阅读</span><span class="sxs-lookup"><span data-stu-id="079ec-107">Read</span></span></td></tr></table>
   name: Office.LocalClientTime
   fullName: Office.LocalClientTime
   langs:
@@ -33,7 +33,7 @@ items:
   - Outlook_1_5.Office.LocalClientTime.timezoneOffset
   - Outlook_1_5.Office.LocalClientTime.year
 - uid: Outlook_1_5.Office.LocalClientTime.date
-  summary: <span data-ttu-id="c74bf-108">表示月份中的某一天的整数值。</span><span class="sxs-lookup"><span data-stu-id="c74bf-108">Integer value representing the day of the month.</span></span>
+  summary: <span data-ttu-id="079ec-108">表示月份中的某一天的整数值。</span><span class="sxs-lookup"><span data-stu-id="079ec-108">Integer value representing the day of the month.</span></span>
   name: date
   fullName: date
   langs:
@@ -45,7 +45,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.hours
-  summary: <span data-ttu-id="c74bf-109">表示 24 小时时钟的小时的整数值。</span><span class="sxs-lookup"><span data-stu-id="c74bf-109">Integer value representing the hour on a 24-hour clock.</span></span>
+  summary: <span data-ttu-id="079ec-109">表示 24 小时时钟的小时的整数值。</span><span class="sxs-lookup"><span data-stu-id="079ec-109">Integer value representing the hour on a 24-hour clock.</span></span>
   name: hours
   fullName: hours
   langs:
@@ -57,7 +57,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.milliseconds
-  summary: <span data-ttu-id="c74bf-110">表示毫秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="c74bf-110">Integer value representing the milliseconds.</span></span>
+  summary: <span data-ttu-id="079ec-110">表示毫秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="079ec-110">Integer value representing the milliseconds.</span></span>
   name: milliseconds
   fullName: milliseconds
   langs:
@@ -69,7 +69,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.minutes
-  summary: <span data-ttu-id="c74bf-111">表示分钟的整数值。</span><span class="sxs-lookup"><span data-stu-id="c74bf-111">Integer value representing the minutes.</span></span>
+  summary: <span data-ttu-id="079ec-111">表示分钟的整数值。</span><span class="sxs-lookup"><span data-stu-id="079ec-111">Integer value representing the minutes.</span></span>
   name: minutes
   fullName: minutes
   langs:
@@ -81,7 +81,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.month
-  summary: <span data-ttu-id="c74bf-112">表示月份的整数值，从 0（表示 1 月）开始到 11（表示十二月）。</span><span class="sxs-lookup"><span data-stu-id="c74bf-112">Integer value representing the month, beginning with 0 for January to 11 for December.</span></span>
+  summary: <span data-ttu-id="079ec-112">表示月份的整数值，从 0（表示 1 月）开始到 11（表示十二月）。</span><span class="sxs-lookup"><span data-stu-id="079ec-112">Integer value representing the month, beginning with 0 for January to 11 for December.</span></span>
   name: month
   fullName: month
   langs:
@@ -93,7 +93,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.seconds
-  summary: <span data-ttu-id="c74bf-113">表示秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="c74bf-113">Integer value representing the seconds.</span></span>
+  summary: <span data-ttu-id="079ec-113">表示秒的整数值。</span><span class="sxs-lookup"><span data-stu-id="079ec-113">Integer value representing the seconds.</span></span>
   name: seconds
   fullName: seconds
   langs:
@@ -105,7 +105,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.timezoneOffset
-  summary: <span data-ttu-id="c74bf-114">表示本地时区与 UTC 之间的分钟数差异的整数值。</span><span class="sxs-lookup"><span data-stu-id="c74bf-114">Integer value representing the number of minutes difference between the local time zone and UTC.</span></span>
+  summary: <span data-ttu-id="079ec-114">表示本地时区与 UTC 之间的分钟数差异的整数值。</span><span class="sxs-lookup"><span data-stu-id="079ec-114">Integer value representing the number of minutes difference between the local time zone and UTC.</span></span>
   name: timezoneOffset
   fullName: timezoneOffset
   langs:
@@ -117,7 +117,7 @@ items:
       type:
       - number
 - uid: Outlook_1_5.Office.LocalClientTime.year
-  summary: <span data-ttu-id="c74bf-115">表示年份的整数值。</span><span class="sxs-lookup"><span data-stu-id="c74bf-115">Integer value repesenting the year.</span></span>
+  summary: <span data-ttu-id="079ec-115">表示年的整数值。</span><span class="sxs-lookup"><span data-stu-id="079ec-115">Integer value representing the year.</span></span>
   name: year
   fullName: year
   langs:
